--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@commitlint/cz-commitlint": "^17.5.0",
     "commitizen": "^4.3.0",
+    "less": "^4.1.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
     "px2rem-loader": "0.1.9",
