--- a/packages/low-code-decorate/package.json
+++ b/packages/low-code-decorate/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.29.1",
     "customize-cra": "^1.0.0",
     "mockjs": "^1.1.0",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
