--- a/packages/low-code-decorate/package.json
+++ b/packages/low-code-decorate/package.json
@@ -16,15 +16,21 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.4.2",
     "core-js": "^3.29.1",
+    "craco-less": "^2.0.0",
+    "css-loader": "^6.7.3",
     "customize-cra": "^1.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "mockjs": "^1.1.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
+    "style-loader": "^3.3.2",
     "styled-components": "^5.3.9",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5",
