--- a/packages/low-code-decorate/package.json
+++ b/packages/low-code-decorate/package.json
@@ -19,6 +19,7 @@
     "craco-less": "^2.0.0",
     "css-loader": "^6.7.3",
     "customize-cra": "^1.0.0",
+    "echarts": "^5.4.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "mockjs": "^1.1.0",
