--- a/packages/low-code-express/package.json
+++ b/packages/low-code-express/package.json
@@ -16,7 +16,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
     "raw-body": "^2.5.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {},
   "scripts": {
@@ -24,8 +25,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "eslintConfig": {
-    "extends": [
-      "../../.eslintrc.js"
+    "extends": []
+  },
+  "paths": {
+    "@/*": [
+      "./src/*"
     ]
   },
   "keywords": [],
