--- a/packages/low-code-express/package.json
+++ b/packages/low-code-express/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-typescript": "^11.1.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -16,13 +21,15 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
     "raw-body": "^2.5.2",
+    "rollup": "^3.21.6",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "rollup -c ./rollup.config.mjs"
   },
   "eslintConfig": {
     "extends": []
